--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Kazushi&rsquo;s&nbsp;Website&nbsp;Private-Space</title>
+   <link rel="stylesheet"href="">
+   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+   <link rel="shortcut icon" href="https://Kondo-Kazushi.github.io/mypage/196B67C4-86AD-4976-B7BD-F8066B5B8E44.ico">
+  </head>
+ <body bgcolor="black">
+ <span style="color: white">
+ <span style="font-family: sans-serif">
+  
+<body>
 
-
+</body>
+    
 </html>
